ifcc-test-output/testfiles-4_invalid_pr/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:5: error: ‘bonsoir’ undeclared (first use in this function)
    2 |     bonsoir
      |     ^~~~~~~
input.c:2:5: note: each undeclared identifier is reported only once for each function it appears in
input.c:2:12: error: expected ‘;’ before ‘return’
    2 |     bonsoir
      |            ^
      |            ;
    3 |    return 42;
      |    ~~~~~~   

exit status: 1
